--- a/tables/all_tiers.tex
+++ b/tables/all_tiers.tex
@@ -1,8 +1,9 @@
 
 \begin{table}[!htbp] \centering 
-  \caption{Interventions containing studies with all three evidence tiers} 
+  \caption{} 
   \label{all_tiers} 
-\begin{tabular}{@{\extracolsep{2}} ccccc} 
+\tiny 
+\begin{tabular}{@{\extracolsep{1mm}} ccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
  & Intervention & Outcome & Eligible Studies & Meet Standards \\ 
