--- a/tables/all_tiers_sig.tex
+++ b/tables/all_tiers_sig.tex
@@ -1,13 +1,14 @@
 
 \begin{table}[!htbp] \centering 
-  \caption{Interventions containing significant studies with all three evidence tiers} 
+  \caption{} 
   \label{all_tiers} 
-\begin{tabular}{@{\extracolsep{2}} cccc} 
+\footnotesize 
+\begin{tabular}{@{\extracolsep{1mm}} ccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
- & Intervention & Outcome & tiers \\ 
+ & Intervention & Outcome & Eligible Studies & Meet Standards \\ 
 \hline \\[-1.8ex] 
-1 & Success for All® & Alphabetics & 3 \\ 
+1 & Success for All® & Alphabetics & 8 & 8 \\ 
 \hline \\[-1.8ex] 
 \end{tabular} 
 \end{table} 
