Updates search parameters for mathed studies

--- a/presentations/presentation_5.29.tex
+++ b/presentations/presentation_5.29.tex
@@ -184,16 +184,13 @@
 \begin{frame}
 \frametitle{Overview of DoE studies}
 
-\textcolor{Cerulean}{366} unique intervention-outcome combinations. 
+158 interventions examining 49 outcomes %with \textcolor{Cerulean}{366} unique combinations.
 
-\textcolor{Cerulean}{6} unique intervention-outcome combinations with studies in all-three evidence tiers. 
-\vspace{-8mm}
+\textcolor{Cerulean}{12} interventions with significant results and same outcome, but analyzed by studies with two different research designs.
+
+\vspace{-4mm}
 \captionsetup{labelformat=empty}
-\input{../tables/all_tiers.tex}
-
-\textcolor{Cerulean}{1} unique intervention-outcome combination with \textcolor{Cerulean}{significant} studies in all-three evidence tiers. 
-\vspace{-8mm}
-\input{../tables/all_tiers_sig.tex}
+\input{../tables/interventions_wwc.tex}
 
 \end{frame}
 
