Minor updates to slides

--- a/presentations/presentation_5.29.tex
+++ b/presentations/presentation_5.29.tex
@@ -135,7 +135,7 @@
 \frametitle{Pre-existing literature}
 
 \begin{itemize}
-\item Literature on evidence use in policy-making, on relationship between science, researchers and policy-makers in a democracy 
+\item Literature on evidence use in policy-making, and on the relationship between science, researchers and policy-makers.
 \vspace{1cm}
 \item Existing field/audit experiments reaching out to policy-makers \hyperlink{existing}{\beamerbutton{Figure}}
 \end{itemize}
@@ -145,21 +145,21 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}
-\frametitle{Evidence standards}
+\frametitle{Current use (?) of evidence standards in policymaking}
 
 \begin{itemize}
-\item Evidence standards and descriptions already adopted in federal legislation.
+\item Evidence standards and descriptions \textcolor{Cerulean}{already adopted in federal legislation}.
 \begin{itemize}
 \item Secondary Education Act 65, No Child Left Behind 01, Every Student Succeeds Act 2015 (ESSA)
 \end{itemize}
 \pause
 \vspace{0.5cm}
-\item Department of Education (DoE) standards tiers under ESSA 2015:
+\item \textcolor{Cerulean}{Department of Education (DoE) standards} tiers under ESSA 2015:
 \begin{itemize}
 \item Strong causal evidence
 \item Moderate causal evidence
 \item Low causal evidence
-\item High levels of specificity covering cluster-random assignment \hyperlink{doe_cluster}{\beamerbutton{Figure}}, IVs \hyperlink{doe_iv}{\beamerbutton{Figure}}, and missingness/attrition \hyperlink{doe_missing}{\beamerbutton{Figure}}, and RDs \hyperlink{doe_rd}{\beamerbutton{Figure}}. 
+\item High levels of specificity covering cluster-random assignment \hyperlink{doe_cluster}{\beamerbutton{Figure}}, IVs \hyperlink{doe_iv}{\beamerbutton{Figure}}, missingness/attrition \hyperlink{doe_missing}{\beamerbutton{Figure}}, and RDs \hyperlink{doe_rd}{\beamerbutton{Figure}}. 
 \end{itemize}
 \pause
 \item Other federal agencies have adopted similar standards \hyperlink{other_agencies}{\beamerbutton{Figure}}        
@@ -170,10 +170,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}
-\frametitle{Treatment 2, Information on evidence standards}
+\frametitle{Current use (?) of evidence standards in policymaking}
 \scriptsize
-\underline{From DoL's CLEAR database:}
-\bigbreak
+
+\underline{From DOL CLEAR database:}
+
 \textit{"\textcolor{Cerulean}{High Causal Evidence standards} mean there is strong evidence that the effects estimated in this study are solely attributable to the intervention being examined. This does not necessarily mean that the study found positive impacts, only that the analysis meets high methodological standards and the causal impacts estimated, whether positive, negative, or null, are credible. Currently, only \textcolor{Cerulean}{well-implemented randomized controlled trials} can receive this rating"}
 
 \textit{"\textcolor{Cerulean}{Low Causal Evidence standards} mean there is little evidence that the effects estimated in the study are attributable to the intervention being examined, and other factors are likely to have contributed to the results. This does not imply that the study's results are not useful for some purposes, but they should be \textcolor{Cerulean}{interpreted with caution}. Causal studies that do not meet criteria for a high or moderate evidence rating receive this rating."}
@@ -355,7 +356,6 @@ Heterogenous treatment effects (CATEs)
 \section{Supplemental material}
 
 
-
 \begin{frame}[label= existing]
 \frametitle{Existing field/audit experiments}
 \label{tab:audit_experiments} 
@@ -446,14 +446,17 @@ Heterogenous treatment effects (CATEs)
 	\item \textcolor{Cerulean}{US Department of Health and Human services}: multiple databases on programs whose purpose is to prevent and/or reduce delinquency or other problem behaviors in young people, teen pregnancy and substance prevention programs, etc.
 	\item \textcolor{Cerulean}{US Department of Justice}: multiple databases on drugs and substance abuse, juveniles, crime and crime prevention, victims and victimization, law enforcement, technology and forensics, corrections and reentry, and courts
 \end{itemize}
+\end{frame}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{frame}[shrink=30]{\only<...>{...}}
+\frametitle{}
+\small
+\bibliography{../doc/bibliography}
 \end{frame}
 
 
 
-
-
-
-\bibliography{../doc/bibliography}
+%\bibliography{../doc/bibliography}
 \end{document}
