Added examples of studies to presentation

--- a/presentations/presentation_5.29.tex
+++ b/presentations/presentation_5.29.tex
@@ -86,7 +86,7 @@
     %\usepackage{bm} % For typesetting bold math (not \mathbold)
     %\logo{\includegraphics[height=0.6cm]{yourlogo.eps}}
 \title{Are legislators more responsive to high quality evidence? A field experiment}
-\author{Angèle Delevoye, Trevor Incerti and Sōm Duchébaggè}
+\author{Angèle Delevoye and Trevor Incerti}
 
 \date{29 May 2019} 
 
@@ -230,6 +230,18 @@
 
 \end{frame}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+\frametitle{Example: same intervention and different evidence tiers}
+
+\begin{figure}
+   \includegraphics[width=0.49\textwidth]{../figs/successforall_obs}
+   \hfill
+   \includegraphics[width=0.49\textwidth]{../figs/successforall_rct}
+\end{figure}
+
+\end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
