More disorganized thoughts and junk
I'll organize this asap :)

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,172 +1,44 @@
-@article{kalla2016campaign,
-  title={Campaign contributions facilitate access to congressional officials: A randomized field experiment},
+@article{kalla2018minimal,
+  title={The minimal persuasive effects of campaign contact in general elections: Evidence from 49 field experiments},
   author={Kalla, Joshua L and Broockman, David E},
-  journal={American Journal of Political Science},
-  volume={60},
-  number={3},
-  pages={545--558},
-  year={2016},
-  publisher={Wiley Online Library}
+  journal={American Political Science Review},
+  volume={112},
+  number={1},
+  pages={148--166},
+  year={2018},
+  publisher={Cambridge University Press}
 }
 
-
-
-@article{bergan2009does,
-  title={Does grassroots lobbying work? A field experiment measuring the effects of an e-mail lobbying campaign on legislative behavior},
-  author={Bergan, Daniel E},
-  journal={American politics research},
-  volume={37},
-  number={2},
-  pages={327--352},
-  year={2009},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
-}
-
-@article{butler2011politicians,
-  title={Do politicians racially discriminate against constituents? A field experiment on state legislators},
-  author={Butler, Daniel M and Broockman, David E},
-  journal={American Journal of Political Science},
-  volume={55},
-  number={3},
-  pages={463--477},
-  year={2011},
-  publisher={Wiley Online Library}
-}
-
-@article{patashnik2016can,
-	Author = {Patashnik, Eric M and Peck, Justin},
-	Journal = {Governing in a Polarized Age: Elections, Parties, and Political Representation in America},
-	Pages = {267},
-	Publisher = {Cambridge University Press},
-	Title = {Can Congress Do Policy Analysis?},
-	Year = {2016}}
-	
-@article{pornpitakpan2004persuasiveness,
-  title={The persuasiveness of source credibility: A critical review of five decades' evidence},
-  author={Pornpitakpan, Chanthika},
-  journal={Journal of applied social psychology},
-  volume={34},
-  number={2},
-  pages={243--281},
-  year={2004},
-  publisher={Wiley Online Library}
-}
-	
-	
-@book{mayhew1974congress,
-	Author = {Mayhew, David R},
-	Publisher = {Yale University Press},
-	Title = {Congress: The electoral connection},
-	Volume = {26},
-	Year = {1974}}
-
-@article{mcginnies1980better,
-  title={Better liked than right: Trustworthiness and expertise as factors in credibility},
-  author={McGinnies, Elliott and Ward, Charles D},
-  journal={Personality and Social Psychology Bulletin},
-  volume={6},
-  number={3},
-  pages={467--472},
-  year={1980},
+@article{arceneaux2005using,
+  title={Using cluster randomized field experiments to study voting behavior},
+  author={Arceneaux, Kevin},
+  journal={The Annals of the American Academy of Political and Social Science},
+  volume={601},
+  number={1},
+  pages={169--179},
+  year={2005},
   publisher={Sage Publications Sage CA: Thousand Oaks, CA}
 }
 
-@book{fenno1973congressmen,
-	Author = {Fenno, Richard F},
-	Publisher = {Little, Brown},
-	Title = {Congressmen in committees},
-	Year = {1973}}
 
+@article{arceneaux2010comparing,
+  title={Comparing negative and positive campaign messages: Evidence from two field experiments},
+  author={Arceneaux, Kevin and Nickerson, David W},
+  journal={American Politics Research},
+  volume={38},
+  number={1},
+  pages={54--83},
+  year={2010},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
 
-@article{schick1976supply,
-	Author = {Schick, Allen},
-	Journal = {Policy Analysis},
-	Pages = {215--234},
-	Publisher = {JSTOR},
-	Title = {The supply and demand for analysis on Capitol Hill},
-	Year = {1976}}
-
-@incollection{lindblom2018science,
-	Author = {Lindblom, Charles},
-	Booktitle = {Classic Readings in Urban Planning},
-	Pages = {31--40},
-	Publisher = {Routledge},
-	Title = {The science of ?muddling through?},
-	Year = {2018}}
-	
-
-
-@article{mandell1984approaches,
-	Author = {Mandell, Marvin B and Sauter, Vicki L},
-	Journal = {Knowledge},
-	Number = {2},
-	Pages = {145--164},
-	Publisher = {Sage Publications},
-	Title = {Approaches to the study of information utilization in public agencies: Problems and pitfalls},
-	Volume = {6},
-	Year = {1984}}
-
-
-@book{cairney2016politics,
-  title={The politics of evidence-based policy making},
-  author={Cairney, Paul},
-  year={2016},
+@article{rogers2015ballot,
+  title={Are ballot initiative outcomes influenced by the campaigns of independent groups? A precinct-randomized field experiment showing that they are},
+  author={Rogers, Todd and Middleton, Joel},
+  journal={Political Behavior},
+  volume={37},
+  number={3},
+  pages={567--593},
+  year={2015},
   publisher={Springer}
 }
-
-
-@book{fenno2002home,
-	Author = {Fenno, Richard F},
-	Publisher = {Longman Publishing Group London, England},
-	Title = {Home Style: House Members in Their Districts (Longman Classics Series)},
-	Year = {2002}}
-
-
-
-@article{doberstein2017whom,
-  title={Whom do bureaucrats believe? A randomized controlled experiment testing perceptions of credibility of policy research},
-  author={Doberstein, Carey},
-  journal={Policy Studies Journal},
-  volume={45},
-  number={2},
-  pages={384--405},
-  year={2017},
-  publisher={Wiley Online Library}
-}
-
-@article{zelizer2018responsive,
-  title={How Responsive Are Legislators to Policy Information? Evidence from a Field Experiment in a State Legislature},
-  author={Zelizer, Adam},
-  journal={Legislative Studies Quarterly},
-  volume={43},
-  number={4},
-  pages={595--618},
-  year={2018},
-  publisher={Wiley Online Library}
-}
-
-
-@article{butler2012field,
-  title={A field experiment on legislators? home styles: service versus policy},
-  author={Butler, Daniel M and Karpowitz, Christopher F and Pope, Jeremy C},
-  journal={The Journal of Politics},
-  volume={74},
-  number={2},
-  pages={474--486},
-  year={2012},
-  publisher={Cambridge University Press New York, USA}
-}
-
-@article{butler2011can,
-  title={Can learning constituency opinion affect how legislators vote? Results from a field experiment},
-  author={Butler, Daniel M and Nickerson, David W and others},
-  journal={Quarterly Journal of Political Science},
-  volume={6},
-  number={1},
-  pages={55--83},
-  year={2011},
-  publisher={Now Publishers, Inc.}
-}
-
-
-
