--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -162,9 +162,14 @@ X
 
 \section{Introduction} \label{sec:Introduction}
 
-One of the ways by which citizens produce policy is through ballot initiatives. Ballot initiatives have been hailed as an efficient direct democracy mechanism, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions, and produce policies without as much interference from moneyed interests and even parties. On the other hand, a lot of scholarly work caution about recent excesses of direct democracy: F. Rosenbluth and I. Shapiro argue that decentralizing power to the grass roots has worsen the quality of policies outputs and decision making in general by weakening the parties (Responsible Parties).  Doubts about voters' competency are also central to this question, and the need for knowledge might be even larger on a ballot initiative than it is in a traditional partisan election (less cues and shortcuts available, often technical topics). 
-The central research question for this paper will be: how do voters process information when asked to vote on a non-partisan, technical policy proposal? Are they able to distinguish between different sources (qualities?) of information? 
-
+One of the ways by which citizens produce policy is through ballot initiatives. Ballot initiatives have been hailed as an efficient direct democracy mechanism, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions, and produce policies without as much interference from moneyed interests and even parties. On the other hand, a lot of scholarly work caution about recent excesses of direct democracy: F. Rosenbluth and I. Shapiro argue that decentralizing power to the grass roots has worsen the quality of policies outputs and decision making in general by weakening the parties  \citep{rosenbluth2018responsible}.  Doubts about voters' competency are also central to this question, and the need for knowledge might be even larger on a ballot initiative than it is in a traditional partisan election (less cues and shortcuts available, often technical topics). The central research question for this paper will be: how do voters process information when asked to vote on a non-partisan, technical policy proposal? Are they able to distinguish between different sources (qualities?) of information? 
+\bigbreak
+The paper will also contribute to the growing literature on campaigns' outreach on people's votes.  \citet{kalla2018minimal}'s meta analysis shows how the effect of campaign contact and advertising is close to 0 in general election (personal contact increase the effects significantly). But more effects seem to appear when (i) the contact is made close to the election and (ii) in primary and ballot measure
+campaigns, when partisan cues are not present. Very few experiments exist on ballot initiatives. They seem to show that even mail campaigns have positive effects, even though we need more results on this, and we are hoping to contribute. More importantly, to our knowledge all existing experiments (at least all experiments on ballot initiative) focus on advocacy outreach, i.e. advocacy groups reaching out with a clear position on the policy proposal. We know very little about whether the nature of the information provided change the efficiency of these campaign messages, i.e if voters are able to make the difference between different sources of information in this context, or if information matters at all. 
+\bigbreak
+Finally, this paper will have a methods component to it. We will replicate the field experiment with a survey experiment, using treatment, outcome measures and even units (participants) as similar as possible to the ones in the field experiment. We are hoping to contribute to the growing literature on the limits of survey experiments in some situations (the zero effect of campaigns outreach goes against the results found in survey experiments, a recent meta analysis on corruption information shows how people say it would change their vote in a survey experiment but no similar results are found in field experiments, etc.). 
+Our prior is that survey experiments should hold better in the context of ballot initiatives. First, there is no partisanship involved. It is possible that survey experiments "fail" in some context because partisanship plays a larger role in the voting booth and real world than it does in a survey experiment. Voting on a technical policy proposals involve much less cues (partisan and other), and therefore a survey experiment might be better able to replicate a real world situation. Second, people do not vote on a person, but on a policy. It is very hard to "build" a person in a survey experiment - things like emotions, feelings, physical appearances, etc. can not be accounted for. Once again, it might make it easier to replicate a vote on a technical policy issues. This is our prior. If we are right, we open the door for more survey experiments on ballot initiatives. Survey experiments have advantages that field experiments do not: we could provide participants with fake information as a treatment in a survey experiment, for example. If we are wrong, then we are contributing to our growing understanding of the contexts and questions for which survey experiments work or do not work. 
+\bigbreak
 We propose a field experiment to test whether citizens acting as policy makers (in the context of a ballot initiative) give more credence to high quality research compared to no information or overtly partisan or biased information (from lobbies). We complement this field experiment with a survey experiment replicating the exact same treatment and outcomes measures than the field experiment. The goal is to see whether in the context of ballot initiatives, technical policy decisions, etc, suvey experiments are less far from the reality of field experiments than we are learning they are in other political settings (campaign messages and corruption information at least). We would register our priors that survey experiments might get us closer to real-world conditions in the context of ballot initiatives. If we are wrong, then we would add to the growing litterature establishing the limits of survey experiments. If we are right, then we would open the doors for more survey experiments in the context of information provision and ballot initiative. Survey experiments offer options that field experiments will never do: providing fake information to participants as the treatment for example. But first we need to make sure they get us close enough to a real-world situation. 
 
 
@@ -179,16 +184,25 @@ This project may speak to broader theoretical questions on the functioning of ou
 [Tensions and relationships between science and democracy]
 
 \subsection{Information experiments}  \label{sec: evidence}
-Campaigns information (Kalla Brookman meta analysis)
+Campaigns information \citep{kalla2018minimal}
 Other political info, corruption and else
 
 
-\subsection{Ballot initiatives}  \label{sec: contact experiments}
+\subsection{Ballot initiatives Experiments}  \label{sec: contact experiments}
+
+\citep{arceneaux2005using}: advocacy group, advocacy message, door to door canvassing, measured turnout and vote. Cluster design, precinct level.
 
 
+\citep{arceneaux2010comparing}: advocacy group, message tone (negative vs positive vs control), canvassing, measure turnout and vote. Two stage randomization approach, precinct level with clustering. 
 
+\citep{rogers2015ballot}: advocacy group, statewide mail program in Oregon, measure turnout and vote. 
 
-
+Summary of the results in  \citep{kalla2018minimal}:
+\begin{figure}[h]
+\includegraphics[scale=0.75]{meta_ballot}
+\bigbreak
+\caption{Meta Analysis on ballot initiatives from Kalla and Broockman 2018}
+\end{figure}
 
 
 \section{Experimental design: field experiment} \label{sec:Design field}
