Updates and additions to introduction, framing, and theory.

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -32,6 +32,37 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
+@misc{dunning2018metaketa,
+  title={Metaketa I: Information, accountability, and cumulative learning},
+  author={Dunning, Thad and Grossman, Guy and Humphreys, Macartan and Hyde, Susan D and McIntosh, Craig and Nellis, Gareth},
+  year={2018},
+  publisher={Cambridge University Press}
+}
+
+@article{incerti2019corruption,
+  title={Corruption information and vote share: A meta-analysis and lessons for survey experiments},
+  author={Incerti, Trevor},
+  year={2019}
+}
+
+@book{leduc2003politics,
+  title={The politics of direct democracy: Referendums in global perspective},
+  author={LeDuc, Lawrence},
+  year={2003},
+  publisher={Broadview Press}
+}
+
+@article{mccaffery1978participatory,
+  title={Participatory democracy and budgeting: The effects of Proposition 13},
+  author={McCaffery, Jerry and Bowman, John H},
+  journal={Public Administration Review},
+  volume={38},
+  number={6},
+  pages={530--538},
+  year={1978},
+  publisher={JSTOR}
+}
+
 @article{rogers2015ballot,
   title={Are ballot initiative outcomes influenced by the campaigns of independent groups? A precinct-randomized field experiment showing that they are},
   author={Rogers, Todd and Middleton, Joel},
@@ -41,4 +72,11 @@
   pages={567--593},
   year={2015},
   publisher={Springer}
+}
+
+@book{rosenbluth2018responsible,
+  title={Responsible Parties: Saving Democracy from Itself},
+  author={Rosenbluth, Frances and Shapiro, Ian},
+  year={2018},
+  publisher={Yale University Press}
 }
