--- a/doc/evidence_policy.tex
+++ b/doc/evidence_policy.tex
@@ -141,67 +141,70 @@
 \title{\textbf{Ballot initiatives and information processing, an experimental approach \\
 (Pre-Analysis Plan)}\vspace{-1ex}\thanks{}}
 % Thanks
-\author{Angèle Delevoye\thanks{angele.delevoye@yale.edu}\vspace{-1ex}}
-\author{Trevor Incerti\thanks{trevor.incerti@yale.edu}\vspace{-1ex}}
-\affil{\textit{Yale University}\vspace{-2.5ex}}
+\author{Angèle Delevoye\thanks{PhD Student in the Department of Political Science, Yale University. angele.delevoye@yale.edu}\vspace{-1ex}}
+\author{Trevor Incerti\thanks{PhD Student in the Department of Political Science, Yale University. trevor.incerti@yale.edu}\vspace{-1ex}}
+\affil{\textit{}\vspace{-2.5ex}}
 \date{\today}
 \maketitle
 
 \begin{abstract}
 \noindent
-X
+\vspace{10cm}
 \end{abstract}
 
 \pagebreak
 
 \doublespace
 
-\begin{center}
-%[PREMIMINARY DRAFT: INCOMPLETE]
-\end{center}
 
 \section{Introduction} \label{sec:Introduction}
 
-One of the ways by which citizens produce policy is through ballot initiatives. Ballot initiatives have been hailed as an efficient direct democracy mechanism, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions, and produce policies without as much interference from moneyed interests and even parties. On the other hand, a lot of scholarly work caution about recent excesses of direct democracy: F. Rosenbluth and I. Shapiro argue that decentralizing power to the grass roots has worsen the quality of policies outputs and decision making in general by weakening the parties  \citep{rosenbluth2018responsible}.  Doubts about voters' competency are also central to this question, and the need for knowledge might be even larger on a ballot initiative than it is in a traditional partisan election (less cues and shortcuts available, often technical topics). The central research question for this paper will be: how do voters process information when asked to vote on a non-partisan, technical policy proposal? Are they able to distinguish between different sources (qualities?) of information? 
-\bigbreak
-The paper will also contribute to the growing literature on campaigns' outreach on people's votes.  \citet{kalla2018minimal}'s meta analysis shows how the effect of campaign contact and advertising is close to 0 in general election (personal contact increase the effects significantly). But more effects seem to appear when (i) the contact is made close to the election and (ii) in primary and ballot measure
-campaigns, when partisan cues are not present. Very few experiments exist on ballot initiatives. They seem to show that even mail campaigns have positive effects, even though we need more results on this, and we are hoping to contribute. More importantly, to our knowledge all existing experiments (at least all experiments on ballot initiative) focus on advocacy outreach, i.e. advocacy groups reaching out with a clear position on the policy proposal. We know very little about whether the nature of the information provided change the efficiency of these campaign messages, i.e if voters are able to make the difference between different sources of information in this context, or if information matters at all. 
-\bigbreak
-Finally, this paper will have a methods component to it. We will replicate the field experiment with a survey experiment, using treatment, outcome measures and even units (participants) as similar as possible to the ones in the field experiment. We are hoping to contribute to the growing literature on the limits of survey experiments in some situations (the zero effect of campaigns outreach goes against the results found in survey experiments, a recent meta analysis on corruption information shows how people say it would change their vote in a survey experiment but no similar results are found in field experiments, etc.). 
-Our prior is that survey experiments should hold better in the context of ballot initiatives. First, there is no partisanship involved. It is possible that survey experiments "fail" in some context because partisanship plays a larger role in the voting booth and real world than it does in a survey experiment. Voting on a technical policy proposals involve much less cues (partisan and other), and therefore a survey experiment might be better able to replicate a real world situation. Second, people do not vote on a person, but on a policy. It is very hard to "build" a person in a survey experiment - things like emotions, feelings, physical appearances, etc. can not be accounted for. Once again, it might make it easier to replicate a vote on a technical policy issues. This is our prior. If we are right, we open the door for more survey experiments on ballot initiatives. Survey experiments have advantages that field experiments do not: we could provide participants with fake information as a treatment in a survey experiment, for example. If we are wrong, then we are contributing to our growing understanding of the contexts and questions for which survey experiments work or do not work. 
-\bigbreak
-We propose a field experiment to test whether citizens acting as policy makers (in the context of a ballot initiative) give more credence to high quality research compared to no information or overtly partisan or biased information (from lobbies). We complement this field experiment with a survey experiment replicating the exact same treatment and outcomes measures than the field experiment. The goal is to see whether in the context of ballot initiatives, technical policy decisions, etc, suvey experiments are less far from the reality of field experiments than we are learning they are in other political settings (campaign messages and corruption information at least). We would register our priors that survey experiments might get us closer to real-world conditions in the context of ballot initiatives. If we are wrong, then we would add to the growing litterature establishing the limits of survey experiments. If we are right, then we would open the doors for more survey experiments in the context of information provision and ballot initiative. Survey experiments offer options that field experiments will never do: providing fake information to participants as the treatment for example. But first we need to make sure they get us close enough to a real-world situation. 
+One of the most direct ways in which citizens can produce policy is through pure democratic channels such as citizens initiatives, popular consultation, and ballot initiatives. Ballot initiatives have been hailed as an efficient direct democracy mechanism, providing citizens with a much-needed voice in policy making and politics. Defenders of ballot initiatives claim that they provide a way for citizens to voice their opinions and produce policies with less interference from parties and special interests [CITE]. Others caution against the excesses of direct democracy [CITE]. \citet{rosenbluth2018responsible} argue that decentralization of power to the grass roots level has worsened the quality of policy outputs and decision making in the United States by weakening parties. Doubts about voters' competency are also central to the question of whether ballot initiatives lead to adoption of good policies [CITE]. The need for technical knowledge may be  larger on a ballot initiative than in a traditional partisan election as fewer heuristic cues are available. 
 
+We therefore seek to determine how voters use information when asked to vote directly on a supposedly non-partisan, technical policy proposal placed on a ballot initiative. Are voters able to distinguish between the different levels of information quality and bias that stem from varying sources of information? Relatedly, do ballot initiatives actually lead to less interference from parties and special interests, or are voters equally swayed by partisan and special interests cues as objective policy research? 
 
+We propose a field experiment examining voting outcomes on citizen initiated ballot propositions following randomized treatment of proposition endorsement or opposition by parties, special interest groups, and policy experts during the 2020 California state elections. We seek to test whether citizens acting as policy makers give more credence to high quality policy research versus overtly partisan or biased information (i.e. special interests). In addition, we will replicate our field experiment with a survey experiment using identical subjects, treatments, and outcome measures.
 
+The paper will contribute to the growing literature on the effect of campaign outreach on vote choice. A recent meta-analysis by \citet{kalla2018minimal} suggests that the effect of campaign contact and advertising on voting outcomes is close to zero in general elections. However, effects seem to appear when (i) contact is made close to the election and (ii) in primary and ballot measure campaigns, when partisan cues are not present. However, few experiments exist on ballot initiatives. Ballot initiative experiments to date use a single advocacy group to contact voters with a clear position on the policy proposal. By contrast, we know little about whether the quality and/or source of the information provided changes the efficiency of these messages. More broadly, our experimental design also allows to speak to the debate over whether direct democracy is actually more democratic than representative democracy, or if it suffers from the same elite manipulation that might operate in both domains.
+ 
+ A growing literature also suggests that survey experimental results often do not replicate in the field. For example, the zero effect of campaign contact in \citet{kalla2018minimal} does not replicate in survey experiments, and a recent meta analysis of the effects of providing voters with information about the corrupt actions of politicians shows an approximately zero effect in field experiments versus large negative effects in survey environments. By contrast, we hypothesize that survey experiments should better approximate the context of ballot initiatives as: (1) the vote choices are real ballot propositions rather than hypothetical candidates, and (2) partisan cues are less prevalent in (technical) ballot proposals. Whether our hypothesis is correct or incorrect, we will contribute to the growing understanding of the contexts and questions in which survey experiments replicate or do not replicate in the real world.
 
 
 \section{Theory} \label{sec:Theory}
 
 \subsection{Science, research and democracy}  \label{sec: democracy}
-This project may speak to broader theoretical questions on the functioning of our current democracies, and the potential gaps between reality and the ideals of deliberative democracies. In this sense, we hope this project will contribute to ongoing discussions within philosophy of science, such as perceptions of research methods and consumption of scientific evidence outside of the academy.
-\bigbreak
+
+This project speaks to broader theoretical questions on the functioning of our current democracies, and in particular the potential gaps between reality and the ideals of deliberative democracies. We hope therefore hope to contribute to ongoing discussions within philosophy of science, such as perceptions of research methods and consumption of scientific evidence outside of the academy. \\
+
 [Tensions and relationships between science and democracy]
 
-\subsection{Information experiments}  \label{sec: evidence}
-Campaigns information \citep{kalla2018minimal}
-Other political info, corruption and else
+\subsection{Ballot initiatives and direct democracy}
 
+Direct democracy at the US state-level is extremely prevalent, yet understudied. 31 of 50 states permit referendums of some kind, and 24 permit citizen initiatives \citep{leduc2003politics}. Of these 24 states, California engages in more individual exercises of direct democracy than any other. Over the past two decades California has voted on X ballot initiatives at the statewide level [compare to other states], and the number of ballot initiatives per election has increased rapidly over the same period.
 
-\subsection{Ballot initiatives Experiments}  \label{sec: contact experiments}
+Some scholars view this growth of direct democracy as a positive extension of democratic values [CITE AND ADD MORE- SEE LEDUC, HELENE?].
 
-\citep{arceneaux2005using}: advocacy group, advocacy message, door to door canvassing, measured turnout and vote. Cluster design, precinct level.
+Others contend that the initiative process in the United States has been captured by special interest groups, directly undermining the increased power ballot initiatives are designed to deliver to citizens [CITE - SEE LEDUC]. This implies that the outcomes of direct democracy are no more democratic than representative democracy, as the same elite manipulation that might operate in both domains. For example, the California initiative process has fostered the development of firms that collect signatures to meet required thresholds, and these firms are typically employed by special interest groups. Our research design allows us to evaluate the special interest capture claim by comparing the efficacy of special interest and partisan messages to those of independent policy analysts. 
 
+Ballot initiatives have also been identified as a source of major policy blunders. One of the most notorious of these blunders is California's Proposition 13 of 1978, which capped annual increases of real property taxes to 2 percent per year and prohibited governments from increasing property taxes without a further referendum. Proposition 13 has been blamed for underfunding of California public schools, contributing to California's housing crisis, and perpetuating income inequality in the state. Proposition 13 was not without its critics at the time of passage, with critics contending that ``Proposition 13 raises serious questions about the feasibility of participatory democracy in a policy area which commonly has been dominated by experts'' \citep{mccaffery1978participatory}. In this context, our experimental design allows us to test whether voters are receptive to expert policy analysis warning of negative consequences of ballot referendum policies. 
 
-\citep{arceneaux2010comparing}: advocacy group, message tone (negative vs positive vs control), canvassing, measure turnout and vote. Two stage randomization approach, precinct level with clustering. 
+\subsection{Current experimental evidence}  \label{sec: contact experiments}
 
-\citep{rogers2015ballot}: advocacy group, statewide mail program in Oregon, measure turnout and vote. 
+A growing body of literature contends that information provision is relatively unsuccessful at changing actual voting outcomes. The primary conclusion from the Metaketa 1 project---which sought to determine if politicians were rewarded for positive information and punished for negative information---was that ``the overall effect of information [provision] across all studies is quite precisely estimated---and not statistically distinguishable from zero'' \citep{dunning2018metaketa}. \citet{incerti2019corruption} draws a similar conclusion in a meta-analysis of corruption information field experiments, finding no voter punishment of allegedly corrupt politicians across field experiments. In the US context, a meta-analysis by \citet{kalla2018minimal} suggests that the effect of campaign contact and advertising on voting outcomes is close to zero in general elections.
 
-Summary of the results in  \citep{kalla2018minimal}:
+However, \citet{kalla2018minimal} find suggestive evidence that campaign contact produces positive effects on vote choice in ballot measure campaigns (see \autoref{fig: kb_meta}). While their meta-analysis includes 23 experiments, these experiments stem from 5 total projects \citep{arceneaux2005using, arceneaux2010comparing, rogers2015ballot}. In each of these projects, voters were contacted by advocacy groups via canvassing, phone, or mail. The existence of positive treatment effects in the ballot initiative environment begs the question of what kinds of informational campaigns are successful. Does high quality policy research persuade voters, or is partisan or special interest contact more effective? 
+
+%\citep{arceneaux2005using}: advocacy group, advocacy message, door to door canvassing, measured turnout and vote. Cluster design, precinct level.
+%
+%\citep{arceneaux2010comparing}: advocacy group, message tone (negative vs positive vs control), canvassing, measure turnout and vote. Two stage randomization approach, precinct level with clustering. 
+%
+%\citep{rogers2015ballot}: advocacy group, statewide mail program in Oregon, measure turnout and vote. 
+
 \begin{figure}[h]
-\includegraphics[scale=0.75]{meta_ballot}
+\includegraphics[scale=0.4]{meta_ballot}
 \bigbreak
-\caption{Meta Analysis on ballot initiatives from Kalla and Broockman 2018}
+\caption{Meta Analysis on ballot initiatives (from \citet{kalla2018minimal})}
+\label{fig: kb_meta}
 \end{figure}
 
 
